# student_mgt_rust

./: Cargo.toml
migrations/: 20260709140535_create_student_table.sql  20260709145147_add_password_column.sql  20260710113025_email_verify_and_email_otp_createdAt.sql  20260710121840_bool_verified_or_not.sql  20260710134329_add_token_field.sql  20260710194744_add_column_forgotten_otp_and_createdTime.sql  20260710195513_change_type_of_created_at_forgottenpassword.sql  20260710200805_change_type_of_created_at_forgottenpassword.sql  20260711105232_add_one_to_oe_relationship_with_student_and_facilitator.sql  20260711121136_change_dtypre_of_otp.sql
src/: main.rs  models.rs  route.rs
src/route/: home.rs  student.rs
